Fix modal overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -615,7 +615,7 @@ th:last-child, td:last-child {
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: auto 1fr;
-    padding: 10px;
+    padding: 30px;
     width: 95%;
     max-width: 450px;
     margin: auto;
@@ -636,12 +636,14 @@ th:last-child, td:last-child {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr auto;
+    width: 100%;
 }
 
 .form-field {
     display: flex;
     flex-direction: column;
     margin: 20px 0;
+    width: 100%;
 }
 
 .form-field label {
@@ -708,12 +710,6 @@ th:last-child, td:last-child {
 .validation-message {
     color: var(--danger);
     font-size: 14px;
-}
-
-@media only screen and (min-width: 390px) {
-    .modal-card {
-        padding: 30px;
-    }
 }
 
 @media only screen and (min-width: 768px) {
